RESOURCES/definition/structural/ingress/gloo/RESOURCES/SPLIT/deployment-discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: gloo
        gloo: discovery
    name: discovery
    namespace: gloo-system
spec:
    replicas: 1
    selector:
        matchLabels:
            gloo: discovery
    template:
        metadata:
            annotations:
                prometheus.io/path: /metrics
                prometheus.io/port: "9091"
                prometheus.io/scrape: "true"
            labels:
                gloo: discovery
        spec:
            containers:
                - env:
                    - name: POD_NAMESPACE
                      valueFrom:
                        fieldRef:
                            fieldPath: metadata.namespace
                    - name: START_STATS_SERVER
                      value: "true"
                  image: quay.io/solo-io/discovery:1.7.11
                  imagePullPolicy: IfNotPresent
                  name: discovery
                  securityContext:
                    allowPrivilegeEscalation: false
                    capabilities:
                        drop:
                            - ALL
                    readOnlyRootFilesystem: true
                    runAsNonRoot: true
                    runAsUser: 10101
            securityContext:
                fsGroup: 10101
            serviceAccountName: discovery
