RESOURCES/definition/structural/ingress/gloo/RESOURCES/SPLIT/service-gateway-proxy.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: gloo
        gateway-proxy-id: gateway-proxy
        gloo: gateway-proxy
    name: gateway-proxy
    namespace: gloo-system
spec:
    ports:
        - name: http
          # nodePort
          nodePort: 30080
          port: 80
          protocol: TCP
          targetPort: 8080
        - name: https
          # nodePort 
          nodePort: 30443
          port: 443
          protocol: TCP
          targetPort: 8443
    selector:
        gateway-proxy: live
        gateway-proxy-id: gateway-proxy
    # type: LoadBalancer
    type: NodePort
