RESOURCES/definition/structural/ingress/gloo/RESOURCES/SPLIT/service-gloo.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: gloo
        gloo: gloo
    name: gloo
    namespace: gloo-system
spec:
    ports:
        - name: grpc-xds
          port: 9977
          protocol: TCP
        - name: rest-xds
          port: 9976
          protocol: TCP
        - name: grpc-validation
          port: 9988
          protocol: TCP
        - name: wasm-cache
          port: 9979
          protocol: TCP
    selector:
        gloo: gloo
