RESOURCES/definition/structural/ingress/gloo/RESOURCES/SPLIT/validatingwebhookconfiguration-gloo-gateway-validation-webhook-gloo-system.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
    annotations:
        helm.sh/hook: pre-install
        helm.sh/hook-weight: "5"
    labels:
        app: gloo
        gloo: gateway
    name: gloo-gateway-validation-webhook-gloo-system
webhooks:
    - clientConfig:
        caBundle: ""
        service:
            name: gateway
            namespace: gloo-system
            path: /validation
      failurePolicy: Ignore
      name: gateway.gloo-system.svc
      rules:
        - apiGroups:
            - gateway.solo.io
          apiVersions:
            - v1
          operations:
            - CREATE
            - UPDATE
            - DELETE
          resources:
            - '*'
      sideEffects: None
